<resources>
    <string name="app_name">TimeTable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Fragments strings -->
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>

    <!-- Main Activity strings -->
    <string name="timetable">TimeTable</string>
    <string name="website">www.fluidalgorithms.com</string>
    <string name="fluid_algorithms_contact">info@fluidalgorithms.com</string>
    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">School website</string>
    <string name="school_website_snackbar">Please, set URL of your school website in settings.</string>

    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="contact">Contact</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="contact_dialog">Contact:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>

    <!-- Tasks Activity strings -->
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="tasks">Tasks</string>
    <string name="select_date">Select date</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_dialog">Description:</string>
    <string name="description">Description</string>
    <string name="date_error">Date field can not be empty!</string>
    <string name="edit_task">Edit task</string>
    <string name="add_task">Add task</string>
    <string name="deadline_snackbar">"Deadline field can not be empty!</string>
    <string name="date">Date</string>

    <!-- Notes Activity strings -->
    <string name="notes">Notes</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field can not be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>

    <!-- Contacts Activity strings -->
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Position:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>

    <!-- Events Activity strings -->
    <string name="events">Events</string>
    <string name="add_event">Add event</string>
    <string name="date_dialog">Date:</string>
    <string name="time_dialog">Time:</string>

    <!-- Settings Activity strings -->
    <string name="settings">Settings</string>
    <string name="sevendays_setting">Enable 7 Days of the Week</string>
    <string name="school_website_setting">Change school website</string>
    <string name="school_website_setting_summary">Change URL of your school website</string>

    <!-- Notification -->
    <string name="notification_title">Today\'s lessons</string>
    <string name="do_not_have_lessons">You do not have lessons!</string>
    <string name="easy">Your school work made easy</string>
    <string name="how_to_use">How to use this app</string>
    <string name="about_us">Fluid Algorithms</string>
    <string name="about_fluid_algorithms">About us</string>
    <string name="about_fluid_algorithms_text">Fluid Algoithms is a company specialised in supporting education. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec augue maximus, elementum erat vel, vestibulum purus. </string>
    <string name="contact_fluid_algorithms">Contact us</string>
    <string name="website_word">website</string>
    <string name="instagram_word">instagram</string>
    <string name="facebook_word">facebook</string>
    <string name="instagram">\@FluidAlgorithms</string>
    <string name="emailMessage">I have downloaded the Fluid Algorithms Timetable app and ...</string>
    <string name="addressFluidAlgorithms">info@fluidalgorithms.com</string>
    <string name="emailSubject">About the Fluid Algorithm Timetable App</string>
    <string name="empty_notes">Leave a  note to yourself! Just so you won\'t forget.</string>
    <string name="empty_monday">no class on Monday</string>
    <string name="empty_tuesday">no class on Tuesday</string>
    <string name="empty_wednesday">no class on Wednesday</string>
    <string name="empty_thursday">no class on Thursday</string>
    <string name="empty_friday">no class on Friday</string>
    <string name="empty_saturday">no class on Saturday</string>
    <string name="empty_sunday">no class on Sunday</string>


    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Create your time table</string>
    <string name="second_slide_title">Never forget a task</string>
    <string name="third_slide_title">Keep track of all your events</string>
    <string name="fourth_slide_title">Keep your school contacts together</string>
    <string name="fifth_slide_title">Write notes to yourself</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can add in your courses for each day. We will notify you every morning with your school schedule.</string>
    <string name="second_slide_desc">We know class is not everything. With this app you can keep track of your assignments. They will be displayed all together in the \'tasks\' section.</string>
    <string name="third_slide_desc">School life can get really busy and you don\'t want to miss out on any events. You can add and track your event in the \'events\' section. </string>
    <string name="fourth_slide_desc">Always looking for the e-mail or phone number of teacher or student? You can now keep them all together, by adding them to the \'contacts\' section.  </string>
    <string name="fifth_slide_desc">There is probably more school stuff you don\'t want to forget. Leave a note to yourself in the \'notes\' section.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="howto_addsubject">You can add a school subject in your timetable by clicking on the round \'add\' button in the right bottom corner.</string>
    <string name="howto_editsubject">You can edit any subject by clicking on the drop down arrow next to the subject\'s name</string>
    <string name="other_activities">Add events, contacts and tasks</string>
    <string name="howto_other_activities">In the same vain you can add events, contacts and tasks. You can access these activities through the side menu. This opens by clicking on the 3 lines menu icon at the top left corner.</string>
    <string name="howto_7days">Display 5 or 7 days week</string>
    <string name="howto_7days_instruction">You can display your timetable in a 5 days a week format, or a 7 days a week format. You can change this setting by clicking on the 3 dots in the right top corner.</string>
</resources>
