<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HowToUseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/full_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/fluid_algorithms_logo"
        android:layout_gravity="center"
        android:layout_margin="24dp" />

    <TextView
        android:id="@+id/howto_add_subject"
        android:layout_margin="@dimen/title_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_subject"
        style="@style/activity_title"/>

    <TextView
        android:id="@+id/howto_add_subject_text"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/howto_addsubject"
        style="@style/activity_text" />

        <ImageView
            android:id="@+id/howto_add_subject_image"
            android:layout_width="400px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:src="@drawable/howto_add"/>

        <TextView
        android:id="@+id/howto_edit_subject"
        android:layout_margin="@dimen/title_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_subject"
        style="@style/activity_title"/>

        <TextView
            android:id="@+id/howto_edit_subject_text"
            android:layout_margin="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howto_editsubject"
            style="@style/activity_text" />

        <ImageView
            android:id="@+id/howto_edit_subject_image"
            android:layout_width="400px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:src="@drawable/howto_edit"
            />

        <TextView
            android:id="@+id/howto_other_activities"
            android:layout_margin="@dimen/title_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_activities"
            style="@style/activity_title"/>

        <TextView
            android:id="@+id/howto_other_activities_text"
            android:layout_margin="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howto_other_activities"
            style="@style/activity_text" />

        <ImageView
            android:id="@+id/howto_other_activities_image"
            android:layout_width="400px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:src="@drawable/howto_other"
            />

        <TextView
            android:id="@+id/howto_7days"
            android:layout_margin="@dimen/title_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howto_7days"
            style="@style/activity_title"/>

        <TextView
            android:id="@+id/howto_7days_text"
            android:layout_margin="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howto_7days_instruction"
            style="@style/activity_text" />

        <ImageView
            android:id="@+id/howto_7days_image"
            android:layout_width="400px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:src="@drawable/howto_7days"
            android:layout_marginBottom="20px"
            />

    </LinearLayout>




</ScrollView>